Context API implemented

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 	<script>
 		// ENV
 		window.NODE_ENV = "_NODE_ENV_";
+		window.REMEMBER_ME = _REMEMBER_ME_;
 	</script>
 
 
 	<!-- Our own global JS -->
-	<script src="/js/plugins.js"></script>
 	<script src="/js/main.js" type="module"></script>
 
 	<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
