--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 	<!-- The main body font -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 
+	<!-- CodeMirror CSS -->
+	<link rel="stylesheet" href="/css/codemirror.css">
+
 	<meta name="theme-color" content="#fafafa">
 
 	<script>
